@@ -1,3 +1,10 @@
+2020-11-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClospre.hpp:
+	  Document lospre implementation choice.
+	* src/SDCClospre.cc:
+	  Improve MC-PRE documentation.
+
 2020-01-23 Philipp Klaus Krause <pkk AT spth.de>
 
 	* sdas/linksrc/Makefile.in:
